--- a/CPU.Forecast.Tool/CPU.Forecast.Tool/CPU.Forecast.Tool.csproj
+++ b/CPU.Forecast.Tool/CPU.Forecast.Tool/CPU.Forecast.Tool.csproj
@@ -93,7 +93,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Deployment" />
+    <Reference Include="System.Deployment">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
