--- a/CPU.Forecast.Tool/CPU.Forecast.Tool/CPU.Forecast.Tool.csproj
+++ b/CPU.Forecast.Tool/CPU.Forecast.Tool/CPU.Forecast.Tool.csproj
@@ -129,6 +129,12 @@
     <Compile Include="ConectBD.Designer.cs">
       <DependentUpon>ConectBD.cs</DependentUpon>
     </Compile>
+    <Compile Include="WaitForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WaitForm1.Designer.cs">
+      <DependentUpon>WaitForm1.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CargaExcelWizard.resx">
       <DependentUpon>CargaExcelWizard.cs</DependentUpon>
     </EmbeddedResource>
@@ -148,6 +154,9 @@
     </Compile>
     <EmbeddedResource Include="ConectBD.resx">
       <DependentUpon>ConectBD.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WaitForm1.resx">
+      <DependentUpon>WaitForm1.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
